Added user target history
