# docs/api-spec/swagger.json
@@ -138,6 +138,54 @@
                 }
             }
         },
+        "/me/email-history": {
+            "get": {
+                "security": [
+                    {
+                        "CookieAuth": []
+                    }
+                ],
+                "description": "Returns the past email targets of the user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "Get the past email targets of the user",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Search email substring",
+                        "name": "search",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successfully retrieved user history",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.TargetUserEmailResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized - missing or invalid token",
+                        "schema": {
+                            "$ref": "#/definitions/internal.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/internal.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/share": {
             "post": {
                 "security": [
@@ -425,6 +473,17 @@
                 }
             }
         },
+        "handlers.TargetUserEmailResponse": {
+            "type": "object",
+            "properties": {
+                "history": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/services.TargetUserEmails"
+                    }
+                }
+            }
+        },
         "internal.ErrorResponse": {
             "type": "object",
             "properties": {
@@ -483,6 +542,17 @@
                 "ShareableTypeURL",
                 "ShareableTypeFile"
             ]
+        },
+        "services.TargetUserEmails": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "is_starred": {
+                    "type": "boolean"
+                }
+            }
         }
     },
     "securityDefinitions": {
